college graph analysis - a bit more comments

--- a/graphs_and_networks/college_graph.ipynb
+++ b/graphs_and_networks/college_graph.ipynb
@@ -6,12 +6,14 @@
    "source": [
     "# Students-courses graph\n",
     "\n",
-    "From a small anonymous liberal arts college, actual enrollment for the Fall 2020 semester."
+    "I was asked by a small college (not mine) to look into their enrollment for Fall 2020, and check if they can noticeably reduce the chances of an internal pandemics by moving a relatively small share of courses online.\n",
+    "\n",
+    "The answer is: Not really. See below for the rationale."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +35,7 @@
     "\n",
     "dfd = pd.read_excel(filename, sheet_name=None) # Read all pages in a dict, in a horrible format\n",
     "names = [df.iloc[0,1] + ' - ' + df.iloc[2,1].split(' ')[0] for key,df in dfd.items()]\n",
-    "# Names will be course name + last name of the professor\n",
+    "# For courses, let's use \"course name + last name of the professor\" as the id\n",
     "# (As for some courses we have several sections, and no obvious id to distinguish them)\n",
     "\n",
     "dfd = pd.read_excel(filename, sheet_name=None, header=10) # Read all pages in a dict, in a good format\n",
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,16 +133,18 @@
    "source": [
     "# Simple stats\n",
     "\n",
+    "This college has ~350 students and ~120 courses. As it's a SLAC, students are really well mixed (not strongly divided into majors). The bipartite student-course (black-red) graph is shown above; each student meets ca. 60 other students every week (see the summary stats below).\n",
+    "\n",
     "### How many students are met by every student?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Condense the graph from bipartite to simple\n",
+    "# Condense the graph from bipartite to a simple graph (non-weighted for now)\n",
     "\n",
     "gdict = nx.to_dict_of_dicts(G) # Output back to base data structure\n",
     "\n",
@@ -150,11 +154,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now remove red nodes (courses) by connecting students direction\n",
+    "# Now remove red nodes (courses) by connecting students directly\n",
     "\n",
     "def bipartite_to_simple(gdict, node_type):\n",
     "    \"\"\"Converts a bipartite course-student graph into weighted student-student graph.\"\"\"\n",
@@ -164,7 +168,7 @@
     "            gdict_new[student] = list(set((other for course in courses \n",
     "                                                     for other in gdict[course]\n",
     "                                                         if other != student)))\n",
-    "            # Not that list(set()) oparation removes duplicates\n",
+    "            # Note that list(set()) removes duplicates\n",
     "    return gdict_new\n",
     "\n",
     "gdict_simple = bipartite_to_simple(gdict, node_type)"
@@ -212,7 +216,9 @@
    "source": [
     "# How to identify most dangerous courses\n",
     "\n",
-    "**Betweenness centrality** is slow to calculate, but it is theoretically best thing to use in this case:\n",
+    "To figure which courses could be onlined I used networkx built-in \"communicability betweenness centrality\" that runs random walks on a graph, and looks at nodes that are most often traversed. Some courses are more dangerous, but not by much! \n",
+    "\n",
+    "**Betweenness centrality** is slow to calculate, but it is theoretically the best thing to use here:\n",
     "\n",
     "* [Communicability betweenness centrality](https://networkx.github.io/documentation/stable/reference/algorithms/generated/networkx.algorithms.centrality.communicability_betweenness_centrality.html#networkx.algorithms.centrality.communicability_betweenness_centrality)\n",
     "\n",
@@ -273,11 +279,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now remove red nodes, but make edges weihted (count how many courses connect any two students).\n",
+    "# Now remove red nodes, but make edges weighted (count how many courses connect any two students).\n",
     "# The best data structure here is probably a dict of dicts.\n",
     "\n",
     "def bipartite_to_weighted(gdict, node_type):\n",
@@ -408,7 +414,8 @@
     }
    ],
    "source": [
-    "# Find threshold alpha\n",
+    "# Find threshold alpha (at which \"almost no one gets sick\" transitions into\n",
+    "# \"almost everyone gets sick\")\n",
     "\n",
     "alphas = np.linspace(0, 0.1, 20)\n",
     "n_experiments = 100\n",
@@ -440,7 +447,7 @@
     }
    ],
    "source": [
-    "# Delete node utility\n",
+    "# Remove one node utility\n",
     "\n",
     "def delete_node(graph, target):\n",
     "    \"\"\"Delete node from a dict of lists\"\"\"\n",
@@ -557,7 +564,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Conclusions:**\n",
+    "**Brief results:**\n",
+    "\n",
+    "What if we online a few top courses? There's almost no effect :( On a well-connected network, the SIR model transitions from \"all healthy\" to \"all sick\" pretty rapidly. And even if you somehow hit the \"critical spot\", canceling 1 course gives you ~1% improvement in n_sick.\n",
+    "\n",
+    "TLDR: Liberal arts colleges are too well-connected, so there's no silver bullet, and small curricular measures have no effect on the expected number of cases.\n",
+    "\n",
+    "**A bit more detailed conclusions:**\n",
     "\n",
     "1. Stochastic SIR model doesn't really work. Even with 5000 simulations, that take forever, the variability of mean values is about 1-2%, which is pretty comparable with the effect size (also 1-2%). For effects of this size, we should have used differential equations on probabilities.\n",
     "1. This variability also means that the effects of 1 course cancellation are negligible, compared to the natural variability of disease propagation. We are at mercy of randomness much more than we are at mercy of our network structure.\n",
