more numpy tests

--- a/sklearn_experiments/basic_numpy.ipynb
+++ b/sklearn_experiments/basic_numpy.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numpy and matrix operations"
+    "# Numpy and matrix operations\n",
+    "\n",
+    "Just trying different numpy methods, to see what will happen."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,27 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 1. 1.]\n",
       "[0. 0. 0.]\n",
       "[[1. 0. 0.]\n",
       " [0. 1. 0.]\n",
       " [0. 0. 1.]]\n",
-      "2.8522744889738028\n"
+      "2.571661828013993\n"
      ]
     }
    ],
    "source": [
-    "print(np.ones(3))\n",
-    "print(np.zeros(3))\n",
-    "print(np.eye(3))\n",
-    "print(np.random.normal(3))"
+    "# Gotcha: different array creators treat their arguments very differently: print(np.ones(3)) # Size\n",
+    "\n",
+    "print(np.zeros(3)) # Size\n",
+    "print(np.eye(3)) # Rank\n",
+    "print(np.random.normal(3)) # Mean :("
    ]
   },
   {
@@ -61,8 +63,8 @@
     }
    ],
    "source": [
-    "print(np.ones((3,3)))\n",
-    "print(np.zeros((3,3)))\n",
+    "print(np.ones((3,3))) # Shape\n",
+    "print(np.zeros((3,3))) # Shape\n",
     "# print(np.eye((3,3))) # - returns an error\n",
     "print(np.random.normal((3,3))) # - first argument is actually a vector of means"
    ]
@@ -83,8 +85,8 @@
     }
    ],
    "source": [
-    "print(np.random.normal(2,3))\n",
-    "print(np.random.rand(2,3))\n",
+    "print(np.random.normal(2,3)) # μ and σ\n",
+    "print(np.random.rand(2,3)) # Shape\n",
     "# print(np.random.rand((2,3))) # - error"
    ]
   },
@@ -113,7 +115,7 @@
     "\n",
     "b = np.random.normal(size=(2,2))\n",
     "print(b)\n",
-    "print(b.shape)"
+    "print(b.shape) # This is obvious, but more of a \"stairs into the camera\" moment."
    ]
   },
   {
@@ -142,6 +144,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.full((2,3),[8,9]) # Error, doesn't broadcast"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -163,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -171,6 +182,7 @@
      "output_type": "stream",
      "text": [
       "[2 3 5]\n",
+      "[3 2 5]\n",
       "None\n",
       "[2 3 5]\n",
       "[2 3 5]\n",
@@ -180,25 +192,23 @@
    ],
    "source": [
     "a = np.array([3,2,5])\n",
-    "print(np.sort(a))\n",
-    "print(a.sort()) # This thing modifies the array\n",
+    "print(np.sort(a))   # Outputs sorted\n",
+    "print(a)            # But doesn't modify it\n",
+    "print(a.sort())     # Unlike this thing that modifies it and returns None\n",
+    "print(a)            # See, it's sorted now\n",
     "print(a)\n",
-    "a.T\n",
-    "print(a)\n",
-    "print(a.T) # Cannot flip a 1D array"
+    "print(a.T) # Cannot 1D arrays flip to themselves (gotcha!)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 2 3]\n",
-      " [4 5 6]]\n",
       "[[1 2 3]\n",
       " [4 5 6]]\n",
       "[[1 4]\n",
@@ -213,17 +223,42 @@
    "source": [
     "a = np.array([[1,2,3],[4,5,6]])\n",
     "print(a)\n",
-    "a.T\n",
-    "print(a)\n",
     "print(a.T)\n",
-    "a.reshape(6)\n",
     "print(a)\n",
     "print(a.reshape(6))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8 4 2 1]]\n",
+      "[[8 4 2 1]]\n",
+      "[[8 4 2 1]]\n",
+      "[[1 2 4 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gotcha: diff action of diff methods / properties\n",
+    "a = np.array([[8,4,2,1]])\n",
+    "print(a)\n",
+    "a.T\n",
+    "print(a)\n",
+    "a.reshape((2,-1))\n",
+    "print(a)\n",
+    "a.sort()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -240,6 +275,8 @@
     }
    ],
    "source": [
+    "# Appending\n",
+    "\n",
     "a = np.array([1,2,3])\n",
     "print(a)\n",
     "# a.append(5) # - Doesn't work, not an array method\n",
@@ -255,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -270,12 +307,15 @@
     }
    ],
    "source": [
-    "a = np.array(1)\n",
+    "# Expanding Dimensions\n",
+    "\n",
+    "a = np.array(1) # An array of a number is just a number\n",
     "print(a)\n",
-    "print(np.expand_dims(a, axis=0))\n",
-    "# print(np.expand_dims(a,axis=1)) # Error: cannot do 1 without doing 0 first\n",
-    "print(np.expand_dims(a, axis=(0,1)))\n",
-    "print(a[..., np.newaxis]) # Alternative notation"
+    "print(np.expand_dims(a, axis=0))    # Expanding dimensions once makes it a 1D array\n",
+    "# print(np.expand_dims(a,axis=1))   # Error: cannot do axis1 without doing axis0 first\n",
+    "print(np.expand_dims(a, axis=(0,1)))# 2D\n",
+    "\n",
+    "print(a[..., np.newaxis]) # Alternative notation for expanding"
    ]
   },
   {
@@ -304,6 +344,8 @@
     }
    ],
    "source": [
+    "# Concatenation \n",
+    "\n",
     "a = np.array([[1,2],[4,5]])\n",
     "# print(np.concatenate( (a , np.array([0,0])) )) # Error: the 2nd array is 1D\n",
     "print(np.concatenate( (a , np.array([[0,0]])) ))\n",
@@ -364,7 +406,7 @@
     "a = np.array([[1,2],[3,4]])\n",
     "c = np.expand_dims(a,2)\n",
     "print(c)        # Gotcha: loops through 0, plots 1-2 as if they were 0-1\n",
-    "print(c[...,0]) # Welcome back"
+    "print(c[...,0]) # Welcome back to normal view"
    ]
   },
   {
@@ -419,6 +461,8 @@
     }
    ],
    "source": [
+    "# Splitting\n",
+    "\n",
     "a = np.array(range(9))\n",
     "print(a)\n",
     "print(np.split(a,3))\n",
@@ -472,6 +516,8 @@
     }
    ],
    "source": [
+    "# Slicing \n",
+    "\n",
     "a = np.array([[1,2,3], [4,5,6]])\n",
     "print(a[1, :])\n",
     "print(a[:, 2])\n",
@@ -501,6 +547,8 @@
     }
    ],
    "source": [
+    "# Stacking and concatenating\n",
+    "\n",
     "a = np.array([[1,2]])\n",
     "b = np.array([[3,4]])\n",
     "print( np.concatenate((a,b)) )\n",
@@ -541,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +605,9 @@
     }
    ],
    "source": [
-    "# The summary of that finding above\n",
+    "# The summary of that gotcha above\n",
+    "# concat(axis=0) is equivalent to hstack for 1D arrays, bu vstack for 1×n arrays!\n",
+    "\n",
     "a = np.array([1,2])\n",
     "b = a+2\n",
     "assert np.array_equal(np.hstack((a,b)) , np.concatenate((a,b), axis=0))\n",
@@ -807,34 +857,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[8 5 0]\n",
-      " [0 6 4]\n",
-      " [8 3 5]]\n"
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "index 3 is out of bounds for axis 0 with size 3",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-4896fec560c2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;31m# Unlike in Matlab, in Numpy it doesn't work.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m: index 3 is out of bounds for axis 0 with size 3"
-     ]
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.random.randint(0,9,size=(3,3))\n",
+    "a = np.array(range(9)).reshape((3,3))\n",
     "print(a)\n",
-    "a[3] # Unlike in Matlab, in Numpy it doesn't work."
+    "# a[3]          # Unlike in Matlab, in Numpy it doesn't work.\n",
+    "a.flatten()[3]  # This is how you do it"
    ]
   },
   {
@@ -858,6 +908,42 @@
    "source": [
     "a = np.zeros(shape=(3,3,3))\n",
     "a[...,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3]\n",
+      "[1 2 3 4]\n",
+      "[0 2 4 6]\n",
+      "[0 1 4 9]\n",
+      "[nan  1.  1.  1.]\n",
+      "[ 1  1  4 27]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\khakh\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array(range(4))\n",
+    "print(a)\n",
+    "print(a+1)\n",
+    "print(a+a)\n",
+    "print(a*a)\n",
+    "print(a/a)\n",
+    "print(np.power(a,a)) # Power is also vectorized, huh :)"
    ]
   }
  ],
