hierarchical pooling model

--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -24,56 +24,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "44\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "folder_name = '../../data/attendance/'\n",
-    "\n",
-    "file_list = os.listdir(folder_name)\n",
-    "print(len(file_list))"
+    "folder_name = '../../data/attendance/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bard Biosem 09/17/2020\n",
-      "Bard Biosem 09/24/2020\n",
-      "Bard Biosem 10/01/2020\n"
+      "Total files:  48\n"
      ]
     }
    ],
    "source": [
+    "# Read all attendance data\n",
+    "\n",
     "df = pd.DataFrame()\n",
     "\n",
-    "for fname in file_list[:3]:\n",
+    "file_list = os.listdir(folder_name)\n",
+    "print(\"Total files: \",len(file_list))\n",
+    "\n",
+    "for fname in file_list:\n",
     "    # print(fname)\n",
+    "    if fname[:11]!='participant':\n",
+    "        continue # Ignore everything that is not a zoom log\n",
     "    fullname = folder_name + fname\n",
     "    header = pd.read_csv(fullname, header=0, nrows=1)\n",
     "    name = header['Topic'][0]\n",
     "    datestring = header['Start Time'][0][:10]\n",
-    "    print(name, datestring)\n",
+    "    #print(name, datestring)\n",
     "    \n",
     "    data = pd.read_csv(fullname, header=2)\n",
     "    data['Date'] = datestring\n",
     "    data['Meeting'] = name\n",
-    "    #print(data)\n",
+    "    data['User Email'] = data['User Email'].fillna('none') # NaNs are ignored by aggregation below\n",
     "    \n",
     "    df = df.append(data, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['name', 'email', 'minutes', 'Date', 'Meeting'], dtype='object')"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df= df.rename({'User Email': 'email', 'Total Duration (Minutes)': 'minutes', 'Name (Original Name)': 'name'}, axis=1)\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the list of students\n",
+    "people = pd.read_csv(folder_name + 'people.txt', header=0, sep='\\t')\n",
+    "people['name'] = people['first'] + ' ' + people['last']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iteratively building summaries\n",
+    "\n",
+    "dfs = df.groupby(['Date', 'Meeting', 'email', 'name']).agg({'minutes' : sum})\n",
+    "dfs = dfs.reset_index()\n",
+    "dfs.minutes = 1*(dfs.minutes>30)\n",
+    "meeting_dict = {'Neuro Lab - Sep 10': 'Neuro', \"Arseny Khakhalin's Zoom Meeting\": 'Neuro', \n",
+    "                'Biosem 00': 'Biosem', 'Bard Biosem': 'Biosem'}\n",
+    "dfs['Meeting'] = dfs['Meeting'].replace(meeting_dict)\n",
+    "\n",
+    "dfs = dfs.groupby(['email','name','Meeting']).agg({'minutes': sum})\n",
+    "\n",
+    "with pd.option_context('display.max_rows', 1400):\n",
+    "    #print(dfs)\n",
+    "    pass"
    ]
   }
  ],
