--- a/sklearn_experiments/basic_numpy.ipynb
+++ b/sklearn_experiments/basic_numpy.ipynb
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -301,6 +301,7 @@
      "text": [
       "1\n",
       "[1]\n",
+      "[[1]]\n",
       "[[1]]\n",
       "[1]\n"
      ]
@@ -314,6 +315,7 @@
     "print(np.expand_dims(a, axis=0))    # Expanding dimensions once makes it a 1D array\n",
     "# print(np.expand_dims(a,axis=1))   # Error: cannot do axis1 without doing axis0 first\n",
     "print(np.expand_dims(a, axis=(0,1)))# 2D\n",
+    "print(np.atleast_2d(a)) # Also 2D\n",
     "\n",
     "print(a[..., np.newaxis]) # Alternative notation for expanding"
    ]
@@ -381,6 +383,28 @@
     "c = np.array([a,b])\n",
     "print(c[0,:,:]) # The new dimension became 0, while old 0 and 1 moved to 1 and 2\n",
     "print(c) # Which means that print() loops through axis 0, then slices on axes 1,2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "[[1 2]]\n",
+      "(1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2]\n",
+    "print(a)\n",
+    "print(np.atleast_2d(a))\n",
+    "print(np.atleast_2d(a).shape) # Turns into row-vectors"
    ]
   },
   {
