more linear regression

--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +114,7 @@
     "dfs = dfs.reset_index()\n",
     "dfs.minutes = 1*(dfs.minutes>30)\n",
     "meeting_dict = {'Neuro Lab - Sep 10': 'Neuro', \"Arseny Khakhalin's Zoom Meeting\": 'Neuro', \n",
+    "                \"Intro Neuro\": 'Neuro',\n",
     "                'Biosem 00': 'Biosem', 'Bard Biosem': 'Biosem'}\n",
     "dfs['Meeting'] = dfs['Meeting'].replace(meeting_dict)\n",
     "\n",
